--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
     width: 50px;
     height: 50px;
     margin-right: 10px;
+    border-radius: 50%; /* Makes the logo circular */
+    border: 2px solid rgb(0, 0, 0); /* Optional for a border around the logo */
 }
 
 .menu .logo span {
@@ -129,8 +131,7 @@ footer p {
     margin: 0;
 }
 
-.color
-{
+.color {
     color: white;
 }
 
@@ -216,4 +217,3 @@ footer p {
         display: none;
     }
 }
-
